--- a/src/components/TaskItem.module.css
+++ b/src/components/TaskItem.module.css
@@ -128,6 +128,7 @@
   min-width: 0;
   cursor: text;
   padding: 11px 0;
+  align-self: flex-start;
 }
 
 .text {
